--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
  Variables 
  ---------------- */
 :root{
-    --main-color: #603F26;
+    --main-color: #DD5746;
     --blue: #0000ff;
     --blue-dark: #18293c;
     --orange: #CD5C08;
